
5.65  2014-11-24
  - Improved installable scripts to use #!perl. (jberger)
  - Improved Mojo::JSON security by escaping the "/" character.
  - Fixed bug in Mojo::DOM::CSS where selected results would also include the
    current root element.

5.64  2014-11-22
  - Fixed bug in Mojolicious::Commands where the global Getopt::Long
    configuration would be changed after a command had already been loaded.

5.63  2014-11-21
  - Improved portability of some tests.
  - Fixed a few multipart form handling bugs.

5.62  2014-11-18
  - Fixed bug in Mojolicious::Routes::Pattern where optional placeholders in
    nested routes would sometimes not work correctly.
  - Fixed bug where "handler" was not an allowed name for controller methods.

5.61  2014-11-14
  - Moved entities.txt into the DATA section of Mojo::Util to avoid
    gratuitously breaking module bundlers.

5.60  2014-11-11
  - Added to_array method to Mojo::Collection.
  - Added xss_escape function to Mojo::Util.
  - Updated Net::DNS::Native requirement to 0.12 for some important bug fixes.

5.59  2014-11-07
  - Added support for non-blocking name resolution with Net::DNS::Native.

5.58  2014-11-06
  - Improved error handling in Mojo::IOLoop::Client.

5.57  2014-11-02
  - Deprecated stringification support in Mojo::Collection in favor of
    Mojo::Collection::join.
  - Deprecated Mojo::Collection::pluck in favor of Mojo::Collection::map.
  - Deprecated Mojo::DOM::val.
  - Improved map method in Mojo::Collection to be able to call methods.
  - Improved tap method in Mojo::Base to be able to call methods.

5.56  2014-10-29
  - Deprecated Mojo::Collection::AUTOLOAD in favor of Mojo::Collection::pluck.
  - Deprecated Mojo::DOM::AUTOLOAD in favor of Mojo::DOM::children.

5.55  2014-10-28
  - Deprecated support for data arguments in Mojo::JSON::Pointer.
  - Added access_control_allow_origin, content_language, content_location and
    strict_transport_security methods to Mojo::Headers.

5.54  2014-10-23